# mqtt_chat_app

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  main.dart  my_dropdown_button.dart  my_elevated_button.dart  my_text_field.dart  text_preferences.dart
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/rust.xcodeproj/: project.pbxproj
rust/rust.xcodeproj/xcuserdata/kaimueller.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
rust/src/api/: logger.rs  mqtt.rs
