[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
iota-client = { version = "2.0.1-rc.5", default-features = false, features = [
    # "ledger_nano",
    #"message_interface",
    "mqtt",
    #"stronghold",
    "tls",
] }
# Async Rust to Sync Rust
tokio = { version = "1.22.0", features = ["full"] }
# Serialization/Deserialization
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
# As JSON
serde_json = { version = "1.0.89", default-features = false }
prefix-hex = { version = "0.5.0", default-features = false, features = [
    "primitive-types",
] }


# For the logger
lazy_static = "1.4.0"
log = "0.4.17"
simplelog = "0.12.0"
parking_lot = "0.12.1"
anyhow = "1.0.66"


rustls = "0.20.8"
rumqttc = "0.20.0"
rustls-native-certs = "0.6.2"

[lib]
crate-type = ["staticlib", "cdylib"]
